// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bundlers/vite UnifiedViteWeappTailwindcssPlugin bundle > captures taro vite tailwindcss v4 raw app-origin css before and after style handler > taro-app-origin-processed-output 1`] = `
"/*! tailwindcss v4.2.1 | MIT License | https://tailwindcss.com */
@supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or
  ((-moz-orient: inline) and (not (color: rgb(from red r g b)))) {
  ::-webkit-backdrop {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
  ::-ms-backdrop {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
  ::before,
  ::after {
    --tw-content: "";
  }
  view,
  text,
  :before,
  :after {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
}
page:not(#n),
.tw-root:not(#n),
wx-root-portal-content:not(#n),
:host:not(#n) {
  --color-cyan-500: rgb(0, 182, 212);
  --color-blue-500: rgb(50, 128, 255);
  --color-purple-300: rgb(216, 180, 255);
  --spacing: 8rpx;
}
@supports (color: color(display-p3 0 0 0%)) {
  page:not(#n),
  .tw-root:not(#n),
  wx-root-portal-content:not(#n),
  :host:not(#n) {
    --color-cyan-500: rgb(0, 182, 212);
    --color-blue-500: rgb(50, 128, 255);
    --color-purple-300: rgb(216, 180, 255);
  }

  @media (color-gamut: p3) {
    page:not(#n),
    .tw-root:not(#n),
    wx-root-portal-content:not(#n),
    :host:not(#n) {
      --color-cyan-500: color(display-p3 0.2467 0.71003 0.84144);
      --color-blue-500: color(display-p3 0.26642 0.49122 0.98862);
      --color-purple-300: color(display-p3 0.82939 0.70374 0.99608);
    }
  }
}
:not(#n)::-webkit-backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
:not(#n)::-ms-backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
view:not(#n),
text:not(#n),
:not(#n):after,
:not(#n):before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.static:not(#n) {
  position: static;
}
.h-14:not(#n) {
  height: 112rpx;
  height: calc(var(--spacing) * 14);
}
.h-_b300px_B:not(#n) {
  height: 300rpx;
}
.bg-_b_h123456_B:not(#n) {
  background-color: #123456;
}
.bg-purple-300:not(#n) {
  background-color: rgb(216, 180, 255);
  background-color: color(display-p3 0.82939 0.70374 0.99608);
  background-color: var(--color-purple-300);
}
.bg-gradient-to-r:not(#n) {
  --tw-gradient-position: to right;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-cyan-500:not(#n) {
  --tw-gradient-from: var(--color-cyan-500);
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.to-blue-500:not(#n) {
  --tw-gradient-to: var(--color-blue-500);
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.text-_b55rpx_B:not(#n) {
  font-size: 55rpx;
}
.text-_b_hc31d6b_B:not(#n) {
  color: #c31d6b;
}
.text-_b_hfff_B:not(#n) {
  color: #fff;
}
"
`;

exports[`bundlers/vite UnifiedViteWeappTailwindcssPlugin bundle > captures taro vite tailwindcss v4 raw app-origin css before and after style handler > taro-app-origin-raw-input 1`] = `
"/*! tailwindcss v4.2.1 | MIT License | https://tailwindcss.com */
@supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or
  ((-moz-orient: inline) and (not (color: rgb(from red r g b)))) {
  ::-webkit-backdrop {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
  ::-ms-backdrop {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
  view,
  text,
  :before,
  :after {
    --tw-gradient-position: initial;
    --tw-gradient-from: rgba(0, 0, 0, 0);
    --tw-gradient-via: rgba(0, 0, 0, 0);
    --tw-gradient-to: rgba(0, 0, 0, 0);
    --tw-gradient-stops: initial;
    --tw-gradient-via-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-via-position: 50%;
    --tw-gradient-to-position: 100%;
  }
}
page:not(#\\#),
.tw-root:not(#\\#),
wx-root-portal-content:not(#\\#),
:host:not(#\\#) {
  --color-cyan-500: rgb(0, 182, 212);
  --color-blue-500: rgb(50, 128, 255);
  --color-purple-300: rgb(216, 180, 255);
  --spacing: 8rpx;
}
@supports (color: color(display-p3 0 0 0%)) {
  page:not(#\\#),
  .tw-root:not(#\\#),
  wx-root-portal-content:not(#\\#),
  :host:not(#\\#) {
    --color-cyan-500: rgb(0, 182, 212);
    --color-blue-500: rgb(50, 128, 255);
    --color-purple-300: rgb(216, 180, 255);
  }

  @media (color-gamut: p3) {
    page:not(#\\#),
    .tw-root:not(#\\#),
    wx-root-portal-content:not(#\\#),
    :host:not(#\\#) {
      --color-cyan-500: color(display-p3 0.2467 0.71003 0.84144);
      --color-blue-500: color(display-p3 0.26642 0.49122 0.98862);
      --color-purple-300: color(display-p3 0.82939 0.70374 0.99608);
    }
  }
}
:not(#\\#)::-webkit-backdrop {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
:not(#\\#)::-ms-backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
view:not(#\\#),
text:not(#\\#),
:not(#\\#):after,
:not(#\\#):before {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.static:not(#\\#) {
  position: static;
}
.h-14:not(#\\#) {
  height: 112rpx;
  height: calc(var(--spacing) * 14);
}
.h-_b300px_B:not(#\\#) {
  height: 300rpx;
}
.bg-_b_h123456_B:not(#\\#) {
  background-color: #123456;
}
.bg-purple-300:not(#\\#) {
  background-color: rgb(216, 180, 255);
  background-color: color(display-p3 0.82939 0.70374 0.99608);
  background-color: var(--color-purple-300);
}
.bg-gradient-to-r:not(#\\#) {
  --tw-gradient-position: to right in oklab;
  background-image: -webkit-linear-gradient(var(--tw-gradient-stops));
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-cyan-500:not(#\\#) {
  --tw-gradient-from: var(--color-cyan-500);
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.to-blue-500:not(#\\#) {
  --tw-gradient-to: var(--color-blue-500);
  --tw-gradient-stops: var(
    --tw-gradient-via-stops,
    var(--tw-gradient-position),
    var(--tw-gradient-from) var(--tw-gradient-from-position),
    var(--tw-gradient-to) var(--tw-gradient-to-position)
  );
}
.text-_b55rpx_B:not(#\\#) {
  font-size: 55rpx;
}
.text-_b_hc31d6b_B:not(#\\#) {
  color: #c31d6b;
}
.text-_b_hfff_B:not(#\\#) {
  color: #fff;
}
@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0, 0, 0, 0);
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0, 0, 0, 0);
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: rgba(0, 0, 0, 0);
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
"
`;
